<resources>
  <string name="app_name">Crays Board</string>
  <string name="expo_system_ui_user_interface_style" translatable="false">light</string>
</resources>
